<resources>
    <string name="app_name">GT-2m-7-Calculator</string>
    <string name="str_1">1</string>
    <string name="str_2">2</string>
    <string name="str_3">3</string>
    <string name="str_4">4</string>
    <string name="str_5">5</string>
    <string name="str_6">6</string>
    <string name="str_7">7</string>
    <string name="str_8">8</string>
    <string name="str_9">9</string>
    <string name="str_0">0</string>
    <string name="str_percent">%</string>
    <string name="str_c">C</string>
    <string name="str_delenye">÷</string>
    <string name="str_ymno">×</string>
    <string name="str_minus">–</string>
    <string name="str_plus">+</string>
    <string name="str_equal">=</string>
    <string name="str_dot">.</string>
    <string name="str_policies">Policies</string>
    <string name="policy">Policy</string>
    <string name="product_category">Product Category</string>
    <string name="origin_country">Origin Country</string>
    <string name="brand">Brand</string>
</resources>